# superdro

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.android  Dockerfile.firmware  LICENSE  Makefile  README.md  prd.md
.github/workflows/: ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/superdro/app/: MainActivity.kt
android/app/src/main/java/com/superdro/app/model/: MachineState.kt
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/xml/: device_filter.xml
docs/: els-bring-up.md  els-layer-a.md  els-layer-b.md  integration-test-checklist.md  superdroElsPrd.md
examples/heidenhain-decoder/: CMakeLists.txt  README.md  main.c  quadrature_encoder.pio
firmware/: CMakeLists.txt
firmware/pio/: quadrature.pio  stepper.pio
firmware/src/: config.c  config.h  els.c  els.h  els_engine.c  els_engine.h  els_fsm.c  els_fsm.h  els_ramp.c  els_ramp.h  encoder.c  encoder.h  main.c  pins.h  protocol.c  protocol.h  safety.c  safety.h  spindle.c  spindle.h  stepper.c  stepper.h
firmware/test/: Makefile  mock_encoder.c  mock_flash.c  mock_spindle.c  test_bresenham.c  test_config.c  test_els.c  test_encoder.c  test_fsm.c  test_multistart.c  test_protocol.c  test_ramp.c  test_ratio.c  test_softlimit.c  test_stepper.c
firmware/test/mocks/: quadrature.pio.h  stepper.pio.h
firmware/test/mocks/hardware/: adc.h  clocks.h  flash.h  pio.h  sync.h  watchdog.h
firmware/test/mocks/pico/: cyw43_arch.h  multicore.h  stdlib.h  unique_id.h
firmware/test/test_config.dSYM/Contents/: Info.plist
firmware/test/test_config.dSYM/Contents/Resources/DWARF/: test_config
firmware/test/test_config.dSYM/Contents/Resources/Relocations/aarch64/: test_config.yml
firmware/test/test_encoder.dSYM/Contents/: Info.plist
firmware/test/test_encoder.dSYM/Contents/Resources/DWARF/: test_encoder
firmware/test/test_encoder.dSYM/Contents/Resources/Relocations/aarch64/: test_encoder.yml
firmware/test/test_protocol.dSYM/Contents/: Info.plist
firmware/test/test_protocol.dSYM/Contents/Resources/DWARF/: test_protocol
firmware/test/test_protocol.dSYM/Contents/Resources/Relocations/aarch64/: test_protocol.yml
tests/e2e/: Makefile  firmware_sim.c  test_e2e.py
tests/e2e/firmware_sim.dSYM/Contents/: Info.plist
tests/e2e/firmware_sim.dSYM/Contents/Resources/DWARF/: firmware_sim
tests/e2e/firmware_sim.dSYM/Contents/Resources/Relocations/aarch64/: firmware_sim.yml
webapp/: go.mod  go.sum
webapp/cmd/superdro-web/: main.go
webapp/internal/serial/: serial.go
webapp/internal/ws/: handler.go
webapp/static/: app.js  index.html  style.css
(+8 files in other folders)
